fixed overflow on playground

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,11 @@ body {
   background-color: var(--dark);
 }
 
+main {
+  margin: 0;
+  padding: 0;
+}
+
 h2 {
   font-size: 4.8rem;
   margin: 0;
@@ -535,13 +540,15 @@ footer h6 {
 /* PLAYGROUND */
 #playground-header {
   padding-top: 64px;
-  height: 100vh;
-  width: 100vw;
+  height: 100svh;
+  width: 100svw;
+  max-width: 100%;
 }
 
 #tiles {
-  height: 100vh;
-  width: 100vw;
+  height: 100svh;
+  width: 100svw;
+  max-width: 100%;
   z-index: 2;
 
   animation: background-pan 10s linear infinite;
